funcionando moeda e item

--- a/OffshoreTrack/Views/OrdemCompra/Read.cshtml
+++ b/OffshoreTrack/Views/OrdemCompra/Read.cshtml
@@ -90,14 +90,14 @@
                                         <tr>
                                             <td>@item.item</td>
                                             <td>@item.quantidade</td>
-                                            <td>@item.Moeda.simbolo @item.valor</td>
+                                            <td> @item.moeda.simbolo   @item.valor</td>
                                         </tr>
                                     }
                                 </tbody>
                             </table>
                             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                                 <h5>Total: </h5>
-                                <p id="moedaSimbolo" >@Model.moeda.simbolo</p><p>@Model.total</p>
+                                <p id="moedaSimbolo">@Model.moeda.simbolo</p><p>@Model.total</p>
                             </div>
                         </div>
                     </div>
