--- a/OffshoreTrack/Views/OrdemCompra/Edit.cshtml
+++ b/OffshoreTrack/Views/OrdemCompra/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model OffshoreTrack.Models.OrdemCompra
 
 @{
-    ViewData["Title"] = "New";
+    ViewData["Title"] = "Editar: Ordem de Compra";
 }
 
 <div class="pagetitle">
@@ -22,8 +22,18 @@
     <div class="col-lg-12">
         <div class="card">
             <div class="card-body">
-                <form method="post" asp-action="Update" enctype="multipart/form-data">
+                <form method="post" action="@Url.Action("Update", "OrdemCompra", new { id = Model.id_oc })" enctype="multipart/form-data">
+
                     <input type="hidden" asp-for="id_oc"/>
+
+                    <!-- Definicao de Moeda -->
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <label asp-for="id_moeda" class="col-sm col-form-label">Moeda:</label>
+                            <select asp-for="id_moeda" class="form-control" asp-items="ViewBag.moeda"></select>
+                        </div>
+                    </div>
+                    <!-- Fim - Definicao de Moeda -->
 
                     <div class="row">
                         <div class="col-sm-9">
@@ -61,14 +71,52 @@
                             <label for="inputText" class="col-sm col-form-label">Data de Conclusão da OC:</label>
                             <input type="date" class="form-control" id="data_conclusao" name="data_conclusao" asp-for="data_conclusao" />
                         </div>
-
                     </div>
-                    <hr>
+
                     <h5>Itens</h5>
+                    <button class="btn btn-primary" type="button" id="btnAdicionarItem"><i class="bi bi-plus"></i> Adicionar Item</button>
+                    <br>
+                    
+                    @if (Model.Itens != null && Model.Itens.Any())
+                    { 
+                        @foreach (var item in Model.Itens)
+                        {
+                            <input type="hidden" asp-for="Itens[@item.id_item].id_item" />
+                            <div class="row" id="itemRow@item.id_item">
+                                <div class="col-sm-5">
+                                    <label for="items[@item.id_item].item">Item:</label>
+                                    <input type="text" class="form-control" id="items[@item.id_item].item" name="Itens[@item.id_item].item" value="@item.item" />
+                                </div>
+                                <div class="col-sm-3">
+                                    <label for="items[@item.id_item].quantidade">Quantidade:</label>
+                                    <input type="number" class="form-control" id="items[@item.id_item].quantidade" name="Itens[@item.id_item].quantidade" value="@item.quantidade" />
+                                </div>
+                                <div class="col-sm-3">
+                                    <label for="items[@item.id_item].valor">Valor:</label>
+                                    <input type="text" class="form-control" id="items[@item.id_item].valor" name="Itens[@item.id_item].valor" value="@item.valor" />
+                                </div>
+                                <div class="col-sm-1">
+                                    <button class="btn btn-danger" data-id="@item.id_item" style="width: 50px; height:50px;margin-top:15px;"><i class="bi bi-trash"></i></button>
+                                </div>
+                            </div>
+                        }
+                    }
+                    <div id="itensContainer"></div>
+                    <br>
 
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                        <h5>Total Anterior: </h5>
+                        <p id="moedaSimbolo">@Model.moeda.simbolo</p><p>@Model.total</p>
+                        <p>|</p>
+                        <h5>Total: </h5>
+                        <p>
+                            <p id="moedaSimbolo"></p>
+                            <span id="displayTotal">0</span>
+                            <input type="hidden" id="total" name="total">
+                        </p>                        
+                    </div>
 
-
-                    <br><hr>
+                    <hr>
                     <div class="col">
                         <div class="form-group">
                             <div class="row">
@@ -161,23 +209,76 @@
 
 @section Scripts
 {
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script type="text/javascript">
-$(document).ready(function(){
-    $(".valor").on('input', function() {
-        var value = $(this).val();
-        value = value.replace(/^R\$ /, '');
-        $(this).val('R$ ' + value);
-    });
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript">
+    
+        $(document).ready(function () 
+        {
+            // Select das moedas
+            $('#moedaSelect').change(function () {
+                var simbolo = $(this).find('option:selected').data('simbolo');
+                $('#moedaSimbolo').text(simbolo);
+            });
+            // Fim - Select das moedas
 
-    $('form').on('submit', function(e) {
-        $(".valor").each(function() {
-            var value = $(this).val();
-            value = value.replace(/^R\$ /, '');
-            $(this).val(value);
+            // Criação de itens
+            let itemIndex = 0;
+            $('#btnAdicionarItem').click(function () {
+                itemIndex = $('div[id^=itemRow]').length; // para garantir que estamos obtendo o índice correto mesmo após a exclusão de um item.
+                const newItemHtml = `
+                    <div class="row" id="itemRow${itemIndex}">
+                        <div class="col-sm-5">
+                            <label for="items[${itemIndex}].item">Item:</label>
+                            <input type="text" class="form-control" id="Itens_${itemIndex}__item" name="Itens[${itemIndex}].item" value="" />
+                        </div>
+                        <div class="col-sm-3">
+                            <label for="items[${itemIndex}].quantidade">Quantidade:</label>
+                            <input type="number" class="form-control" id="Itens_${itemIndex}__quantidade" name="Itens[${itemIndex}].quantidade" value="" />
+                        </div>
+                        <div class="col-sm-3">
+                            <label for="items[${itemIndex}].valor">Valor:</label>
+                            <input type="text" class="form-control" id="Itens_${itemIndex}__valor" name="Itens[${itemIndex}].valor" value="" />
+                        </div>
+                        <div class="col-sm-1">
+                            <button class="btn btn-danger btnRemoverItem" type="button" style="width: 50px; height:50px;margin-top:15px;"><i class="bi bi-trash"></i></button>
+                        </div>
+                    </div>
+                `;
+                $('#itensContainer').append(newItemHtml);
+                calcularTotal();
+                itemIndex++;
+            });
+            // Fim - Criação de itens
+
+            // Remoção de itens recem add
+            $('#itensContainer').on('click', '.btnRemoverItem', function () {
+                // Remover a linha correspondente
+                $(this).closest('.row').remove();
+                calcularTotal();
+            });
+            // Fim - Remoção de itens recem add
+
+            // Função para calcular o total
+            function calcularTotal() 
+            {
+                var total = 0;
+                // Percorrer cada item e calcular o subtotal
+                $('.row[id^="itemRow"]').each(function () {
+                    var index = $(this).attr('id').replace('itemRow', '');
+                    var quantidade = parseInt($('#items\\[' + index + '\\]\\.quantidade').val()) || 0;
+                    var valorUnitario = parseFloat($('#items\\[' + index + '\\]\\.valor').val().replace(',', '.')) || 0;
+                    var subtotal = quantidade * valorUnitario;
+                    total += subtotal;
+                });
+                // Exibir o total
+                $('#displayTotal').text(total.toFixed(2).replace('.', ','));
+                // Setar o total ao campo hidden
+                $('#total').val(total.toFixed(2).replace('.', ','));
+            }
+            calcularTotal(); // Chama a função aqui
+
+            // Fim - Função para calcular o total
+
         });
-    });
-});
-</script>
-
+    </script>
 }
